<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<RelativeLayout 
	    android:id="@+id/add_task_parent_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	    
	    <TextView
	        android:id="@+id/add_task_header"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:text="@string/add_task_header"
	    	android:textSize="18sp" />
	    
	    <TextView
	        android:id="@+id/add_task_course_title"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:textSize="18sp" 
	    	android:textStyle="bold"
	    	android:layout_toRightOf="@id/add_task_header"/>
	    
	    <EditText
	        android:id="@+id/add_task_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/add_task_header"
	        android:hint="@string/hint_new_task_title" 
	        android:layout_marginTop="12dp"
	        android:layout_marginBottom="16dp" />
	    
	    <TextView
		    android:id="@+id/add_task_date_tag"
		    android:layout_marginTop="16dp"
		    android:layout_marginBottom="12dp"
		    android:layout_below="@id/add_task_title"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:text="@string/add_task_date" 
	    	android:textStyle="bold"
	    	android:textSize="18sp" />
	    
	    <TextView
		    android:layout_below="@id/add_task_date_tag"
	        android:id="@+id/add_task_date"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:textSize="16sp"
	    	android:padding="12dp" />
		
		<Button 
		    android:layout_toRightOf="@id/add_task_date"
		    android:layout_below="@id/add_task_date_tag"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/add_task_pick_date" 
		    android:onClick="showDatePickerDialog" />
		
		<TextView 
		    android:id="@+id/add_task_notes_tag"
		    android:layout_marginTop="16dp"
		    android:layout_marginBottom="12dp"
		    android:layout_below="@id/add_task_date"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:text="@string/add_task_notes" 
	    	android:textStyle="bold"
	    	android:textSize="18sp" />
	
		<EditText
		    android:id="@+id/add_task_notes"
		    android:layout_below="@id/add_task_notes_tag"
		    android:layout_width="match_parent"
		    android:layout_height="150dp"
		    android:textSize="16sp"
		    android:inputType="textMultiLine"
		    android:layout_margin="16dp" 
		    android:gravity="top" />
	    
	</RelativeLayout>
</ScrollView>