<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_account_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/big_vertical_margin"
    android:paddingLeft="@dimen/big_horizontal_margin"
    android:paddingRight="@dimen/big_horizontal_margin"
    android:paddingTop="@dimen/big_vertical_margin"
    android:orientation="vertical" >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/my_account_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/my_account_header" />
    
    <TextView
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/my_account_school_tag" />
    
    <TextView
        android:id="@+id/my_account_school" 
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp" />
    
    <TextView
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/my_account_email_tag" />
    
    <TextView
        android:id="@+id/my_account_email" 
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp" />
        
    
    

</LinearLayout>
